# kquant-playground

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  common.h  flake.nix  helper.cpp  helper.h  print_simd.h  quant.cpp  quant.h  quant_2bit.cpp  quant_2bit.h  quant_test.cpp  type.h
